# RL

./: .gitmodules  README.md  analyze_data_samples.py  chat.py  check_dependencies.py  prepare_data.py  pyproject.toml  requirements.txt  setup.py  sft_train.py  streamlit_chat.py
data/: system_prompt.txt
data/hci_data/: user_chatbox_data.json
data/processed/: ECG_Knowledge_Basic_Q_A_grpo.jsonl  ECG_Knowledge_Basic_Q_A_grpo.parquet  ECG_Knowledge_Basic_Q_A_train.jsonl  ECG_Knowledge_Basic_Q_A_val.jsonl  ECG_Knowledge_Basic_Q_A_val.parquet
ecg_rlhf_grpo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
outputs/2025-10-28/05-26-43/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2025-10-28/18-54-26/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2025-10-28/19-29-30/.hydra/: config.yaml  hydra.yaml  overrides.yaml
scripts/: analyze_data.sh  chat_with_model.sh  prepare_data.sh  run_grpo.sh  run_grpo_with_check.sh  sft_train.sh  streamlit_chat.sh
wandb/: latest-run
wandb/run-20251028_045302-tlh5yjfv/: run-tlh5yjfv.wandb
wandb/run-20251028_045302-tlh5yjfv/files/: config.yaml  wandb-metadata.json
wandb/run-20251028_050307-g66g3ol3/: run-g66g3ol3.wandb
wandb/run-20251028_050307-g66g3ol3/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20251028_052826-co6gdldu/: run-co6gdldu.wandb
wandb/run-20251028_052826-co6gdldu/files/: wandb-metadata.json
wandb/run-20251028_185612-k50uzt25/: run-k50uzt25.wandb
wandb/run-20251028_185612-k50uzt25/files/: requirements.txt  wandb-metadata.json
wandb/run-20251028_193114-kx1qypt7/files/: wandb-metadata.json
