[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecg-rlhf-grpo"
version = "0.1.0"
description = "RLHF with GRPO for ECG Medical Reasoning"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = [
    "machine-learning",
    "deep-learning",
    "reinforcement-learning",
    "RLHF",
    "GRPO",
    "ECG",
    "medical-ai",
    "llama",
    "transformers",
    "pytorch",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

# Core dependencies
dependencies = [
    # Core ML frameworks
    "torch==2.6.0",
    "torchvision==0.21.0",
    "transformers==4.56.0",
    "accelerate==0.34.2",
    "peft>=0.6.0",
    "vllm==0.8.4",  # Note: Requires manual LoRA bug patch (see README)

    # VERL/RL dependencies
    "trl>=0.7.0",
    "ray[default]>=2.43.0",
    "tensordict>=0.8.0,<=0.10.0,!=0.9.0",
    "torchdata",

    # Data processing
    "datasets>=2.14.0",
    "pandas==2.2.3",
    "numpy==1.26.4",
    "h5py==3.12.1",
    "joblib==1.4.2",
    "PyYAML==6.0.2",

    # Scientific computing
    "scipy==1.14.1",
    "scikit-learn==1.5.2",
    "scikit-image==0.21.0",

    # ECG-specific
    "ecg_plot @ git+https://github.com/willxxy/ecg-plot",
    "wfdb==4.1.2",

    # Deep learning utilities
    "einops==0.8.0",
    "PyWavelets==1.7.0",

    # Visualization
    "matplotlib==3.9.2",
    "seaborn==0.13.2",
    "tensorboard",

    # NLP & evaluation
    "nltk==3.9.1",
    "rouge==1.0.1",
    "sentencepiece==0.2.0",
    "sacremoses==0.1.1",
    "evaluate==0.4.3",
    "bert_score",
    "spacy==3.8.4",

    # Image processing
    "opencv_python==4.6.0.66",
    "pillow==10.3.0",
    "imageio==2.27.0",
    "imgaug==0.4.0",
    "imutils==0.5.4",

    # API & Web
    "openai>=1.52.0",
    "requests==2.32.4",
    "gradio==5.31.0",
    "beautifulsoup4==4.12.2",
    "html5lib==1.1",
    "validators==0.18.2",
    "qrcode==7.4.2",

    # ML interpretability
    "captum==0.7.0",

    # Utilities
    "tqdm==4.66.5",
    "wandb==0.18.3",
    "regex==2024.9.11",
    "codetiming",
    "hydra-core",
    "pybind11",
    "pylatexenc",
    "ninja==1.11.1.3",
    "termcolor==3.0.1",
    "faiss-cpu==1.10.0",

    # Build tools
    "maturin==1.7.4",

    # Development
    "ruff",
    "pre-commit",
    "pytest",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "isort>=5.10.0",
]
flash = [
    "flash-attn==2.7.4.post1",
]
judge = [
    "llm-blender @ git+https://github.com/yuchenlin/LLM-Blender.git",
    "trl[judges]",
]
deepspeed = [
    "deepspeed>=0.12.0",
]
all = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "isort>=5.10.0",
    "flash-attn==2.7.4.post1",
    "llm-blender @ git+https://github.com/yuchenlin/LLM-Blender.git",
    "trl[judges]",
    "deepspeed>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/RL"
Documentation = "https://github.com/yourusername/RL/blob/main/README.md"
Repository = "https://github.com/yourusername/RL"
"Bug Tracker" = "https://github.com/yourusername/RL/issues"

[project.scripts]
ecg-prepare-data = "prepare_data:main"
ecg-sft-train = "sft_train:main"
ecg-chat = "chat:main"

[tool.setuptools]
py-modules = ["prepare_data", "sft_train", "chat"]

[tool.setuptools.packages.find]
exclude = ["tests*", "scripts*", "data*", "models*", "outputs*", "verl*"]

[tool.black]
line-length = 120
target-version = ['py310', 'py311']

[tool.isort]
profile = "black"
line_length = 120

[tool.ruff]
line-length = 120
target-version = "py310"
